syntax = "proto3";

option csharp_namespace = "Location.Service.ProtoClass";

package Location;

service LocationService {
  rpc GetAllCities (EmptyParam) returns (CityListResponse);
}

//=========================Request-=============================
message EmptyParam
{}

//=========================Response-=============================
message CityListResponse {
  repeated CityResponse city = 1;
}

message CityResponse {
  int32 id = 1;
  string name = 2;
}

